--- a/Masquepan/Base.lproj/Main.storyboard
+++ b/Masquepan/Base.lproj/Main.storyboard
@@ -122,7 +122,7 @@
                     <tabBarItem key="tabBarItem" title="Productos" image="file-list-tick-7" id="qKt-o5-I54"/>
                     <connections>
                         <outlet property="collectionViewProds" destination="mVz-YU-a8A" id="xA0-oT-dn7"/>
-                        <segue destination="R7g-sQ-Mwl" kind="presentation" identifier="segueCollectionToDetail" id="H67-Ng-1ui"/>
+                        <segue destination="R0L-ir-dCN" kind="showDetail" identifier="segueCollectionToDetail" id="WrJ-r9-nR7"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uUo-ZB-Ta7" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -158,13 +158,6 @@
                                 <rect key="frame" x="67" y="166" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Nombre del Producto" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J5f-mE-QCK">
-                                <rect key="frame" x="102" y="122" width="171" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Descripción del Producto" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MQ5-5i-LG7">
                                 <rect key="frame" x="86" y="316" width="202" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -194,6 +187,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Nombre del Producto" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J5f-mE-QCK">
+                                <rect key="frame" x="102" y="118" width="171" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="bbi-Ge-Fyl"/>
@@ -217,25 +217,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lFx-R3-lDr" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="14Z-dO-YcE" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3218" y="964"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="EiE-bm-zB9">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="R7g-sQ-Mwl" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6gF-Wl-a9j">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="ZD3-n7-WhA" kind="relationship" relationship="rootViewController" id="pLW-kQ-OQX"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SPe-In-E0c" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2289" y="964"/>
+            <point key="canvasLocation" x="3000.8000000000002" y="963.86806596701661"/>
         </scene>
         <!--Ticket-->
         <scene sceneID="wS3-Rr-4FR">
@@ -336,6 +318,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bOg-BT-snm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-153" y="964"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="wRO-NO-8ff">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="R0L-ir-dCN" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="obP-zJ-XmW">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ZD3-n7-WhA" kind="relationship" relationship="rootViewController" id="8eD-uG-0iN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zrW-T1-1Cs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2111" y="964"/>
         </scene>
     </scenes>
     <resources>
